@@ -1,3 +1,12 @@
+Thu May 17 15:02:31 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/transport/shmem/ShmemSendStrategy.cpp:
+        * dds/DCPS/transport/shmem/ShmemTransport.cpp:
+
+          Fixed compile errors on non-Win32 platforms that do not have
+          support for POSIX semaphores (tested with Android, may also
+          fix VxWorks).
+
 Thu May 17 07:57:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * NEWS:
